--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,10 +69,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - lib/wallpapers/alam.jpg
+    - lib/wallpapers/anime.jpg
     - lib/wallpapers/game.jpg
-    - lib/wallpapers/hot.jpg
-    - lib/wallpapers/sexy.jpg
+    - lib/wallpapers/music.jpeg
+    - lib/wallpapers/nature.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
