--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   image_gallery_saver: ^2.0.3
   path_provider: ^2.1.1
   permission_handler: ^11.0.1
+  google_nav_bar: ^5.0.6
   shared_preferences: ^2.2.2
 
 dev_dependencies:
@@ -69,10 +70,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - lib/wallpapers/anime.jpg
+    - lib/wallpapers/alam.jpg
     - lib/wallpapers/game.jpg
-    - lib/wallpapers/music.jpeg
-    - lib/wallpapers/nature.jpg
+    - lib/wallpapers/hot.jpg
+    - lib/wallpapers/sexy.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
