--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   path_provider: ^2.1.1
   permission_handler: ^11.0.1
   shared_preferences: ^2.2.2
+  smooth_page_indicator: ^1.0.0+2
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
@@ -69,10 +71,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - lib/wallpapers/anime.jpg
+    - lib/wallpapers/alam.jpg
     - lib/wallpapers/game.jpg
-    - lib/wallpapers/music.jpeg
-    - lib/wallpapers/nature.jpg
+    - lib/wallpapers/hot.jpg
+    - lib/wallpapers/sexy.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
